deployment-nodeaffinity-softrule.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  namespace: devenvns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tomcat
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: tomcat-nginix
      labels:
        app: tomcat
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                - key: size
                  operator: NotIn
                  values:
                  
                    - large
            nodeSelectorTerms:
              - matchExpressions:
                - key: size
                  operator: NotIn
                  values:
                    - small
      containers:
         - name: tomcat
           image: ravindra45/ravindra45:1.1.1
