deployment-nodeselector.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  namespace: devenvns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tomcat
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: tomcat-nginix
      labels:
        app: tomcat
    spec:
      nodeSelector:
          size: large
      containers:
         - name: tomcat
           image: ravindra45/ravindra45:1.1.1
