deployment-quota.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  namespace: devenvns
spec:
  replicas: 3
  selector:
   matchLabels:
     app: tomcat
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1     
  template:
    metadata:
      name: tomcat-nginx
      labels:
        app: tomcat
    spec:
      containers:
        - name: tomcat
          image: krishna123456/tomcat:1.11.111
          resources: 
            limits:
              cpu: "1"
              memory: 256Mi
            requests:
              cpu: 500m
              memory: 128Mi
