myfirstpod.yml
apiVersion: v1
kind: Pod
metadata: 
  name: tomcat
spec:
  containers:
    - name: mytomcat
      image: prajwal1327/mytomcat:1.1.6
