myfourthpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: tomcat-nginx-1
  labels: 
    app: tomcat
spec:
  containers:
    - name: mytomcat
      image: prajwal1327/mytomcat:1.1.6
    - name: mynginx
      image: nginx:1.14.2
