mysecondpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: tomcat-jenkins
spec:
  containers:
    - name: mytomcat
      image: prajwal1327/mytomcat:1.1.6
    - name: myjenkins
      image: jenkins/jenkins:lts
