clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
    name: tom-ngx-clusterip
spec: 
  selector:
      app: tomcat
  type: ClusterIP
  ports:
    - name: tomcat
      protocol: TCP
      targetPort: 8080
      port: 8080
    - name: nginx
      protocol: TCP
      targetPort: 80
      port: 80
