externalipname-service.yml
apiVersion: v1
kind: Service
metadata:
    name: tom-ngx-externalip
spec: 
  selector:
      app: tomcat
  type: 
  ports:
    - name: tomcat
      protocol: TCP
      targetPort: 8080
      port: 8080
  
    - name: nginx
      protocol: TCP
      targetPort: 80
      port: 80
  externalIPs:
    - 18.223.159.156
