mytomcat-clusterIP.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mytomcat
  labels: 
    app: tomcat
spec:
  containers:
    - name: mytomcat
      image: prajwal1327/mytomcat:1.1.6
---
apiVersion: v1
kind: Service
metadata:
    name: tom-clusterip
spec: 
  selector:
      app: tomcat
  type: ClusterIP
  ports:
    - name: tomcat
      protocol: TCP
      targetPort: 8080
      port: 8080
