nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
    name: tom-ngx-nodeport
spec: 
  selector:
      app: tomcat
  type: NodePort
  ports:
    - name: tomcat
      protocol: TCP
      targetPort: 8080
      port: 8080
      nodePort: 30000
    - name: nginx
      protocol: TCP
      targetPort: 80
      port: 80
      nodePort: 30001
