tomcat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat-ingress
spec:
  ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: tom-clusterip
              port:
                number: 8080
